--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,19 +6,19 @@ on:
     branches: master
 jobs:
 #Configura el trabajo para que se ejecute en un corredor de Ubuntu
-  run-on: ubuntu-latest
+  runs-on: ubuntu-latest
   steps:
-    -
-    #Verifica el repositorio y lo descarga al corredor
-      name: Checkout
-      uses: actions/checkout@v2
-    -
-      name: Login to GitHub CR
-      uses: docker/login-action@v1
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GCR_PASSWORD }}
-    -
-      name: build and push the last docker image
-      run: docker build -t ghrc.io/mariasanzs/makeupiv:latest . && docker push ghrc.io/mariasanzs/makeupiv:latest
+  -
+#Verifica el repositorio y lo descarga al corredor
+   name: Checkout
+   uses: actions/checkout@v2
+  -
+   name: Login to GitHub CR
+   uses: docker/login-action@v1
+   with:
+     registry: ghcr.io
+     username: ${{ github.actor }}
+     password: ${{ secrets.GCR_PASSWORD }}
+  -
+   name: build and push the last docker image
+   run: docker build -t ghrc.io/mariasanzs/makeupiv:latest . && docker push ghrc.io/mariasanzs/makeupiv:latest
