--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,24 +1,22 @@
-#nombre para el flujo de trabajo
 name: Docker image push
 
 on:
   push:
     branches: master
 jobs:
-#Configura el trabajo para que se ejecute en un corredor de Ubuntu
-  runs-on: ubuntu-latest
-  steps:
-  -
-#Verifica el repositorio y lo descarga al corredor
-   name: Checkout
-   uses: actions/checkout@v2
-  -
-   name: Login to GitHub CR
-   uses: docker/login-action@v1
-   with:
-     registry: ghcr.io
-     username: ${{ github.actor }}
-     password: ${{ secrets.GCR_PASSWORD }}
-  -
-   name: build and push the last docker image
-   run: docker build -t ghrc.io/mariasanzs/makeupiv:latest . && docker push ghrc.io/mariasanzs/makeupiv:latest
+  login:
+    runs-on: ubuntu-latest
+    steps:
+    -
+     name: Checkout
+     uses: actions/checkout@v2
+    -
+     name: Login to GitHub CR
+     uses: docker/login-action@v1
+    with:
+       registry: ghcr.io
+       username: ${{ github.actor }}
+       password: ${{ secrets.GCR_PASSWORD }}
+    -
+     name: build and push the last docker image
+     run: docker build -t ghrc.io/mariasanzs/makeupiv:latest . && docker push ghrc.io/mariasanzs/makeupiv:latest
