intento 2 regla aws , #48

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ language:
 install:
   - docker pull mariasanzs/makeupiv
   - docker images
-  - cd makeup-iv-bot
 
 script:
   - docker run -t -v `pwd`:/test mariasanzs/makeupiv:latest
-  - serverless deploy
+  - cd makeup-iv-bot && serverless deploy
