intento 3 regla aws , #48

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ language:
 install:
   - docker pull mariasanzs/makeupiv
   - docker images
+  - curl -o- -L https://slss.io/install | bash
 
 script:
   - docker run -t -v `pwd`:/test mariasanzs/makeupiv:latest
